# serializer version: 1
# name: test_real_home_assistant_registries_resolve_all_target_types
  dict({
    'area': dict({
      'area_ids': list([
        '<area>',
      ]),
      'config_entry_ids': list([
        'mobile_entry',
      ]),
      'device_ids': list([
        '<device>',
      ]),
      'services': list([
        'notify.mobile_app_phone',
      ]),
    }),
    'device': dict({
      'area_ids': list([
      ]),
      'config_entry_ids': list([
        'mobile_entry',
      ]),
      'device_ids': list([
        '<device>',
      ]),
      'services': list([
        'notify.mobile_app_phone',
      ]),
    }),
    'floor': dict({
      'area_ids': list([
        '<area>',
      ]),
      'config_entry_ids': list([
        'mobile_entry',
      ]),
      'device_ids': list([
        '<device>',
      ]),
      'services': list([
        'notify.mobile_app_phone',
      ]),
    }),
    'label': dict({
      'area_ids': list([
      ]),
      'config_entry_ids': list([
        'mobile_entry',
      ]),
      'device_ids': list([
        '<device>',
      ]),
      'services': list([
        'notify.mobile_app_phone',
      ]),
    }),
    'user': dict({
      'area_ids': list([
      ]),
      'config_entry_ids': list([
      ]),
      'device_ids': list([
      ]),
      'services': list([
        'notify.mobile_app_phone',
      ]),
    }),
  })
# ---
# name: test_target_helpers_resolve_all_target_types
  dict({
    'area': dict({
      'area_ids': list([
        'area_1',
      ]),
      'config_entry_ids': list([
        'mobile_entry',
      ]),
      'device_ids': list([
        'device_1',
      ]),
      'services': list([
        'notify.mobile_app_phone',
      ]),
    }),
    'device': dict({
      'area_ids': list([
      ]),
      'config_entry_ids': list([
        'mobile_entry',
      ]),
      'device_ids': list([
        'device_1',
      ]),
      'services': list([
        'notify.mobile_app_phone',
      ]),
    }),
    'floor': dict({
      'area_ids': list([
        'area_1',
      ]),
      'config_entry_ids': list([
        'mobile_entry',
      ]),
      'device_ids': list([
        'device_1',
      ]),
      'services': list([
        'notify.mobile_app_phone',
      ]),
    }),
    'label': dict({
      'area_ids': list([
      ]),
      'config_entry_ids': list([
        'mobile_entry',
      ]),
      'device_ids': list([
        'device_1',
      ]),
      'services': list([
        'notify.mobile_app_phone',
      ]),
    }),
    'user': dict({
      'area_ids': list([
      ]),
      'config_entry_ids': list([
      ]),
      'device_ids': list([
      ]),
      'services': list([
        'notify.mobile_app_phone',
      ]),
    }),
  })
# ---
